Fix /play autocomplete on long values